; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_sol-thread.c_ps_pglobal_lookup.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_sol-thread.c_ps_pglobal_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.minimal_symbol = type { i32 }

@PS_NOSYM = common dso_local global i32 0, align 4
@PS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ps_pglobal_lookup(i32 %0, i8* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.minimal_symbol*, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = call %struct.minimal_symbol* @lookup_minimal_symbol(i8* %11, i32* null, i32* null)
  store %struct.minimal_symbol* %12, %struct.minimal_symbol** %10, align 8
  %13 = load %struct.minimal_symbol*, %struct.minimal_symbol** %10, align 8
  %14 = icmp ne %struct.minimal_symbol* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %4
  %16 = load i32, i32* @PS_NOSYM, align 4
  store i32 %16, i32* %5, align 4
  br label %22

17:                                               ; preds = %4
  %18 = load %struct.minimal_symbol*, %struct.minimal_symbol** %10, align 8
  %19 = call i32 @SYMBOL_VALUE_ADDRESS(%struct.minimal_symbol* %18)
  %20 = load i32*, i32** %9, align 8
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @PS_OK, align 4
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %17, %15
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local %struct.minimal_symbol* @lookup_minimal_symbol(i8*, i32*, i32*) #1

declare dso_local i32 @SYMBOL_VALUE_ADDRESS(%struct.minimal_symbol*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
